[tool.poetry]
name = "london-bike-ml"
version = "0.1.0"
description = ""
authors = ["Bruce Wu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
ipykernel = "^6.27.1"
xgboost = "^2.0.2"
optuna = "^3.5.0"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
